Change "A CRE ..." to "A Commercial Real Estate ..."

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>A CRE Consulting Company</title>
-  <meta name="description" content="Official website for A CRE Consulting Company: a commercial real estate consulting platform delivering underwriting, strategy, and financial modeling expertise">
-</head>
-<body>
-  <h1>A CRE Consulting Company</h1>
-  <p>Official website for A CRE Consulting Company: a commercial real estate consulting platform delivering underwriting, strategy, and financial modeling expertise.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>A Commercial Real Estate Consulting Company</title>
+    <meta
+      name="description"
+      content="Official website for A Commercial Real Estate Consulting Company: a CRE consulting platform delivering underwriting, strategy, and financial modeling expertise"
+    />
+  </head>
+  <body>
+    <h1>A Commercial Real Estate Consulting Company</h1>
+    <p>
+      Official website for A Commercial Real Estate Consulting Company: a CRE
+      consulting platform delivering underwriting, strategy, and financial
+      modeling expertise.
+    </p>
+  </body>
 </html>
