--- a/index.html
+++ b/index.html
@@ -7,13 +7,28 @@
       name="description"
       content="Official website for A Commercial Real Estate Consulting Company: a CRE consulting platform delivering underwriting, strategy, and financial modeling expertise"
     />
+    <style>
+      body {
+        margin: 0;
+        height: 100vh;
+        display: flex;
+        justify-content: center;   /* horizontal center */
+        align-items: flex-start;   /* start vertically */
+      }
+      .content {
+        margin-top: 33vh;          /* push it ~33% down */
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <h1>A Commercial Real Estate Consulting Company</h1>
-    <p>
-      Official website for A Commercial Real Estate Consulting Company: a CRE
-      consulting platform delivering underwriting, strategy, and financial
-      modeling expertise.
-    </p>
+    <div class="content">
+      <h1>A Commercial Real Estate Consulting Company</h1>
+      <p>
+        Official website for A Commercial Real Estate Consulting Company: a CRE
+        consulting platform delivering underwriting, strategy, and financial
+        modeling expertise.
+      </p>
+    </div>
   </body>
 </html>
