--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>A Commercial Real Estate Consulting Company</title>
+    <title>Commercial Real Estate Consulting Company</title>
     <meta
       name="description"
-      content="Official website for A Commercial Real Estate Consulting Company: a CRE consulting platform delivering underwriting, strategy, and financial modeling expertise"
+      content="Official website for the Commercial Real Estate Consulting Company: a CRE consulting platform delivering underwriting, strategy, and financial modeling expertise"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="content">
-      <h1>A Commercial Real Estate Consulting Company</h1>
+      <h1>Commercial Real Estate Consulting Company</h1>
       <p>
-        Official website for A Commercial Real Estate Consulting Company: a CRE
-        consulting platform delivering underwriting, strategy, and financial
+        Official website for the Commercial Real Estate Consulting Company: a
+        CRE consulting platform delivering underwriting, strategy, and financial
         modeling expertise.
       </p>
     </div>
